# portfolio-drift-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
drift_mcp/: __init__.py  envelope.py  server.py
tests/: conftest.py  test_server.py
