[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-drift-mcp"
version = "0.1.0"
description = "MCP server wrapping portfolio-drift-agent — lets LLM clients (Claude Desktop, Claude Code) audit a portfolio against GitHub conversationally."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Danh Le" }]
keywords = ["mcp", "model-context-protocol", "fastmcp", "anthropic", "claude", "portfolio", "drift", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastmcp>=2.0",
    "portfolio-drift-agent @ git+https://github.com/odanree/portfolio-drift-agent@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.7",
]

[project.scripts]
portfolio-drift-mcp = "drift_mcp.server:main"

[project.urls]
Repository = "https://github.com/odanree/portfolio-drift-mcp"
Issues = "https://github.com/odanree/portfolio-drift-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["drift_mcp*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"
asyncio_mode = "auto"
